--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,6 +15,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install black ruff pytest
+          pip install -e .
       - name: Lint
         run: |
           ruff check .
