--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,16 @@
 **/*.csv
 !data/
 !data/**
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.egg-info/
+.build/
+dist/
+.venv/
+.env
+.ipynb_checkpoints/
+.DS_Store
