--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,16 @@ dependencies = [
   "pyyaml>=6.0.0"
 ]
 
+[build-system]
+requires = ["setuptools>=65", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
 [tool.ruff]
 line-length = 100
 select = ["E","F","I","UP","B"]
